fix: complete audit fixes for critical, high, and medium priority issues
CRITICAL FIXES:
- CRIT-01: Completely rewrote README.md with new numbered structure
- CRIT-02: Updated iOS icon generation scripts with correct paths
- CRIT-03: Fixed validation script to reference correct commands.json location

HIGH PRIORITY FIXES:
- HIGH-01-02: Updated ios-aliases.sh to reference both iOS and Desktop folders correctly
- HIGH-03-04: Fixed all command files (.claude/commands/*.md) to use correct relative paths to personal/
- HIGH-03-04: Fixed all agent files (.claude/agents/opta-optimizer.md) with correct personal/ paths

MEDIUM PRIORITY FIXES:
- MED-01: Updated agent optimizer files with correct paths (completed via HIGH fixes)
- MED-03: Replaced 'Opta MacOS' with 'Opta Native' in Opta Mini planning docs
- MED-06: Completely rewrote STRUCTURE.md with new numbered structure
- MIN-04: Added build/ folders to .gitignore

All critical and high priority audit issues resolved.

--- a/1. Apps/2. Desktop/2. Opta Mini/.planning/phases/02-app-detection/02-01-PLAN.md
+++ b/1. Apps/2. Desktop/2. Opta Mini/.planning/phases/02-app-detection/02-01-PLAN.md
@@ -37,7 +37,7 @@ struct OptaApp: Identifiable, Hashable {
     static let allApps: [OptaApp] = [
         OptaApp(
             id: "com.opta.OptaNative",
-            name: "Opta MacOS",
+            name: "Opta Native",
             bundleIdentifier: "com.opta.OptaNative",
             icon: "dial.high"
         ),
